test/parser/return.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:12: error: expected expression
    return |;

    // CHECK: [[# @LINE + 1 ]]:14: error: expected ';' at the end of a return statement
    return 0 |;

    return 1 + 2;
    // CHECK: ReturnStmt
    // CHECK-NEXT:   BinaryOperator: '+'
    // CHECK-NEXT:     NumberLiteral: '1'
    // CHECK-NEXT:     NumberLiteral: '2'
    
    return;
    // CHECK: ReturnStmt
    // CHECK-NOT: {{.*}}
}
